[gd_scene load_steps=4 format=3 uid="uid://7exhvh1y7dxf"]

[ext_resource type="Texture2D" uid="uid://c6dqpctcfktff" path="res://Scenes/WaterDrain/WaterDrain.png" id="1_2xqhq"]
[ext_resource type="Script" uid="uid://b7exkvwpxihhc" path="res://Scenes/WaterDrain/water_drain.gd" id="1_lkjcm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n4p5h"]
size = Vector2(34, 33)

[node name="WaterDrain" type="Node2D"]
script = ExtResource("1_lkjcm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2xqhq")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_n4p5h")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
